fix Toast and Tooltip z-indexes

--- a/starters/docs/src/Toast.css
+++ b/starters/docs/src/Toast.css
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: var(--spacing-4);
   right: var(--spacing-4);
+  z-index: 100;
   display: flex;
   flex-direction: column-reverse;
   gap: var(--spacing-2);
